[package]
name = "kernel"
version = "0.1.0"
description = "The actual Kernel for Windy"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[dependencies]
sbi = { path = "../sbi" }
riscv = { path = "../riscv" }
devicetree = { path = "../devicetree" }
rumio = { path = "../../../rumio", version = "0.2" }
owo-colors = "1.3"
displaydoc-lite = "0.1"

[features]
default = ["virt"]
# Enables the kernel for the QEMU `virt` machine
virt = []
